# notify_mail

./: Dockerfile  README.md  config.toml.sample  docker-compose.yml  notify.py  notify_test.py  pyproject.toml
