[tool.poetry]
name = "notify_mail"
version = "0.1.0"
description = ""
authors = ["Makoto Ito <makoto.ito@tsukasa-ind.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
toml = "^0.10.2"
types-toml = "^0.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.11b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
